// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the activities list filters with alternate filters 1`] = `
<div
  className="activities-list-filters"
>
  <h2>
    Filter Activities
  </h2>
  <div
    className="filter-group"
  >
    <label>
      Search For:
    </label>
    <br />
    <input
      onChange={[Function]}
      type="text"
      value="walk"
    />
  </div>
  <div
    className="filter-group"
  >
    <label>
      Sort By:
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="name"
      >
        Name
      </option>
      <option
        value="distance"
      >
        Distance
      </option>
    </select>
  </div>
  <div
    className="filter-group"
  >
    <label>
      Sport Type:
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="all"
      >
        All
      </option>
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
  </div>
</div>
`;

exports[`should render the activities list filters with default values 1`] = `
<div
  className="activities-list-filters"
>
  <h2>
    Filter Activities
  </h2>
  <div
    className="filter-group"
  >
    <label>
      Search For:
    </label>
    <br />
    <input
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="filter-group"
  >
    <label>
      Sort By:
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="name"
      >
        Name
      </option>
      <option
        value="distance"
      >
        Distance
      </option>
    </select>
  </div>
  <div
    className="filter-group"
  >
    <label>
      Sport Type:
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="all"
      >
        All
      </option>
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
  </div>
</div>
`;
